--- a/src/assets/scss/pages/_homepage.scss
+++ b/src/assets/scss/pages/_homepage.scss
@@ -25,7 +25,10 @@
   [id^='pillar'],
   .five-flagship-programs,
   .three-innovative-fields {
-    margin-bottom: 2.5rem;
+    margin-bottom: 4rem;
+    @include breakpoint('medium') {
+      margin-bottom: 3rem;
+    }
 
     li {
       p:first-of-type {
@@ -72,7 +75,8 @@
     }
   }
 
-  .five-flagship-programs {
+  .five-flagship-programs,
+  .three-innovative-fields {
     ul {
       @extend %plain-list;
 
@@ -82,6 +86,7 @@
     }
 
     li {
+      padding-bottom: 0.5rem;
       padding-left: 68px;
       background-repeat: no-repeat;
       background-position: left top;
@@ -96,7 +101,16 @@
       @include breakpoint('medium') {
         flex-basis: 47%;
       }
+    }
 
+    h5 {
+      margin-top: 0.25rem;
+      margin-bottom: 0;
+    }
+  }
+
+  .five-flagship-programs {
+    li {
       @for $i from 1 through length($icons) {
         &:nth-child(#{$i}) {
           $icon: nth($icons, $i);
@@ -108,10 +122,14 @@
   }
 
   .three-innovative-fields {
-    clear: both;
+    li {
+      @for $i from 1 through length($icons2) {
+        &:nth-child(#{$i}) {
+          $icon: nth($icons2, $i);
 
-    li > *:not(:last-child) {
-      display: inline;
+          background-image: url('../images/field-#{$icon}.png');
+        }
+      }
     }
   }
 
